# itsreg-front-bot

./: Makefile  README.md  auth.yaml  config.ini-example  config.py  main.py  pyproject.toml  requirements.txt
common/: functions.py
common/models/: block.py  entry_point.py  option.py
core/filters/: role.py
core/handlers/: admin.py  command_bot.py  individual_bot.py  templates.py  user.py
core/middlewares/: auth.py  db.py  exists_user.py  role.py
core/states/: Bots.py  CreateBot.py  Mailing.py  NewBot.py
core/utils/: functions.py  keyboards.py  variables.py
resources/: auth.yaml  bots.yaml
services/api/: itsreg.py
services/api/auth/api/default/: register_user.py
services/api/bots/api/default/: start_bot.py
services/api/bots/models/: option.py  post_bots.py
services/auth/: __init__.py
services/auth/api/default/: get_user.py  login_user.py
services/auth/models/: __init__.py  authenticated.py  error.py  post_login.py  post_register.py  user.py
services/bots/: __init__.py
services/bots/api/default/: create_bot.py  delete_bot.py  get_answers.py  get_bot.py  get_bots.py  start_bot.py  start_mailing.py  stop_bot.py
services/bots/models/: __init__.py  block.py  block_type.py  bot.py  bot_status.py  entry_point.py  error.py  mailing.py  post_bots.py
services/db/: create_db.py  data.py  models.py  pool_creater.py  repository.py
